# tutti-frutti

./: .gitignore  Cargo.toml  README.md  tutti-frutti.sh
frutti-cli/: Cargo.toml
frutti-cli/src/: main.rs
tutti-frutti/: Cargo.toml
tutti-frutti-example/: Cargo.toml
tutti-frutti-example/src/: main.rs
tutti-frutti/src/: client.rs  errors.rs  graphql.rs  lib.rs  listings.rs  util.rs
