[package]
name = "tutti-frutti"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
futures = "0.3"
reqwest = { version = "0.12.8", features = [
    "cookies",
    "json",
    "gzip",
    "brotli",
    "deflate",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"
